@@ -22,6 +22,7 @@ transform="@program_transform_name@"
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 sbindir=@sbindir@
+bindir=@bindir@
 libdir=@libdir@
 sysconfdir=@sysconfdir@
 PACKAGE_NAME=@PACKAGE_NAME@
@@ -35,8 +36,9 @@ grub_mkconfig_dir=${sysconfdir}/grub.d
 
 self=`basename $0`
 
-grub_mkdevicemap=${sbindir}/`echo grub-mkdevicemap | sed ${transform}`
-grub_probe=${sbindir}/`echo grub-probe | sed ${transform}`
+grub_mkdevicemap=${sbindir}/`echo grub-mkdevicemap | "sed ${transform}"`
+grub_probe=${sbindir}/`echo grub-probe | sed "${transform}"`
+grub_script_check="${bindir}/`echo grub-script-check | sed "${transform}"`"
 
 GRUB_PREFIX=`echo '/@bootdirname@/@grubdirname@' | sed "s,//*,/,g"`
 
@@ -290,7 +292,7 @@ for i in ${grub_mkconfig_dir}/* ; do
 done
 
 if test "x${grub_cfg}" != "x" ; then
-  if ! grub-script-check ${grub_cfg}.new; then
+  if ! ${grub_script_check} ${grub_cfg}.new; then
     echo "Syntax errors are detected in generated GRUB config file." >&2
     echo "Ensure that there are no errors in /etc/default/grub" >&2
     echo "and /etc/grub.d/* files or please file a bug report with" >&2
